--- a/frontend/src/assets/Home.css
+++ b/frontend/src/assets/Home.css
@@ -22,6 +22,7 @@
     user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
+    overflow: hidden;
 }
 
 .drag-handle {
